// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<FieldExpansionToggle/> custom properties 1`] = `
<div
  className="field-icon expand-custom-cls"
  id="expand-custom-id"
  onClick={[MockFunction]}
  title="Custom click to expand"
>
  <span
    className="fa fa-lg field-highlighted fa-plus-square"
  />
</div>
`;

exports[`<FieldExpansionToggle/> default properties 1`] = `
<div
  className="field-icon "
  id="expand-id"
  onClick={[MockFunction]}
  title="Click to expand"
>
  <span
    className="fa fa-lg fa-plus-square"
  />
</div>
`;

exports[`<FieldExpansionToggle/> expanded and highlighted 1`] = `
<div
  className="field-icon "
  id="expand-id"
  onClick={[MockFunction]}
  title="Click to collapse"
>
  <span
    className="fa fa-lg fa-minus-square"
  />
</div>
`;
